# iot_wifi_sensor

./: .gitignore  CMakeLists.txt  Makefile  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  battery_state.c  iot_wifi_sensor.h  main.c  volf_error.c  volf_error.h  volf_log.c  volf_log.h  volf_misc.c  volf_misc.h  volf_ota_update.c  volf_ota_update.h  volf_wifi_connect.c  volf_wifi_connect.h
main/sensors/: ac_current_sensor.c  ds18b20.c  ds18b20.h  sht40_sensor.c  soil_moisture_sensor.c  temperature_sensor.c  volf_sensors.h
